Connection with Azure done and AzureMapsRouteCalculator updated